huojia di er qi

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="Shortcut Icon" href="http://m.86sb.com/favicon.ico?0001">
-    <title>尚标货架</title>
+    <title>商标名片</title>
   </head>
   <body>
     <div id="app"></div>
